fixing header spacing on stats page

--- a/StatsStyle.css
+++ b/StatsStyle.css
@@ -1,141 +1,137 @@
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh; 
-    margin: auto;
-    background-color: #fff5e6;
-  }
-  
-h1{
-    margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh;
+  margin: auto;
+  background-color: #fff5e6;
 }
 
-h2{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin: 0px;
+h1 {
+  margin: 0px;
 }
 
-.header{
-    width: 100%;
-    height: 45px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 0px;
-    background-color: #343434;
-    border-top: 6px solid rgb(40, 40, 40);
-    /* border-bottom: 4px solid rgb(43, 43, 43); */
-    
-    
+h2 {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  margin: 0px;
+}
+
+.header {
+  width: 100%;
+  height: 45px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 0px;
+  background-color: #343434;
+  border-top: 6px solid rgb(40, 40, 40);
+  /* border-bottom: 4px solid rgb(43, 43, 43); */
 }
 
 .headerText {
-    color: rgb(255, 255, 255);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-decoration: none;
-    padding-left: 50px;
-    
+  color: rgb(255, 255, 255);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-decoration: none;
+  padding-left: 50px;
 }
 
 .headerLogin {
-    color: rgb(255, 255, 255);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-decoration: none;
-    margin-left: auto;
-    margin-right: 50px;
-    padding-left: 50px;
+  color: rgb(255, 255, 255);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: 50px;
+  padding-left: 50px;
 }
 
-.gridContainer{
-    align-content: center;
-    padding-top: 100px;
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
-    grid-template-rows: 100px 100px 100px;
-    column-gap: 50px;
-    row-gap: 10px;
+.gridContainer {
+  align-content: center;
+  padding-top: 100px;
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  grid-template-rows: 100px 100px 100px;
+  column-gap: 50px;
+  row-gap: 10px;
 }
 
-.gridContainer2{
-    align-content: center;
-    display: grid;
-    grid-template-columns: 300px 300px;
-    grid-template-rows: 100px 100px;
-    column-gap: 50px;
-    row-gap: 10px;
-    padding-bottom: 10%;
+.gridContainer2 {
+  align-content: center;
+  display: grid;
+  grid-template-columns: 300px 300px;
+  grid-template-rows: 100px 100px;
+  column-gap: 50px;
+  row-gap: 10px;
+  padding-bottom: 10%;
 }
 
-#weekly{
-    text-align: left;
-    border: 1px black solid;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+#weekly {
+  text-align: left;
+  border: 1px black solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 }
 
-#monthly{
-    text-align: left;
-    border: 1px black solid;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+#monthly {
+  text-align: left;
+  border: 1px black solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
 
-#yearly{
-    text-align: left;
-    border: 1px black solid;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+#yearly {
+  text-align: left;
+  border: 1px black solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
 }
 
-#bestDay{
-    text-align: center;
-    border: 1px black solid;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+#bestDay {
+  text-align: center;
+  border: 1px black solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
 
-#worstDay{
-    text-align: center;
-    border: 1px black solid;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
+#worstDay {
+  text-align: center;
+  border: 1px black solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
 }
 
 form {
-    background-color: white;
+  background-color: white;
 }
 
-
-.footerContainer{
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 30px;
-    border-top: 1px black solid;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: #343434;
+.footerContainer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  border-top: 1px black solid;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: #343434;
 }
 
-.footerContainer h6{
-    text-align: left;
-    font-size: 10px;
-    padding-left: 3%;
-    margin: 0;
+.footerContainer h6 {
+  text-align: left;
+  font-size: 10px;
+  padding-left: 3%;
+  margin: 0;
 }
 
-.gridContainer2 #bestDay{
-    height: 200%;
-    width: 100%;
+.gridContainer2 #bestDay {
+  height: 200%;
+  width: 100%;
 }
 
-.gridContainer2 #worstDay{
-    height: 200%;
-    width: 100%;
+.gridContainer2 #worstDay {
+  height: 200%;
+  width: 100%;
 }
